--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,8 @@ edition = "2021"
 
 [dependencies]
 serde_json = "1.0.87"
-unreact = "0.1.3"
+# unreact = "0.1.3"
+unreact = { path = "../../unreact" }
 
 [dev-dependencies]
 just = "1.8.0"
