--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,8 @@
 [package]
 name = "unreact-template"
-version = "0.1.0"
+version = "0.2.0"
 edition = "2021"
 
 [dependencies]
-serde_json = "1.0.87"
-unreact = "0.1.3"
-
-[dev-dependencies]
-just = "1.8.0"
+unreact = "0.2.0-alpha6"
+# unreact = { path = "../../unreact" }
