--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,4 +7,4 @@ edition = "2021"
 unreact = { version = "0.2.0", default-features = false }
 
 [features]
-default = ["unreact/dev"]
+default = ["unreact/watch"]
