--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-unreact = { version = "0.5.4", default-features = false }
+unreact = "0.6.0"
 
 [features]
 default = ["unreact/watch"]
