--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -22,7 +22,7 @@ jobs:
 
             # Run compilation script with Rust
             - name: Build 🔧
-              run: cargo run --no-default-features
+              run: cargo run
 
             # Push changes with plugin
             - name: Deploy 🚀
