Use crates.io Unreact version

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,5 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-# unreact = "0.7.0"
-unreact = { git = "https://github.com/darccyy/unreact.git" }
+unreact = "0.7.0"
 
